@@ -1,3 +1,9 @@
+2012-05-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* INSTALL:
+	* m4/ax_boost_program_options.m4:
+	- updated autoconf macro
+
 2011-11-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* configure.ac:
